--- a/templates/ranking/info.html.twig
+++ b/templates/ranking/info.html.twig
@@ -1,6 +1,6 @@
 <div class="panel panel-flat">
   <div class="panel-heading has-visible-elements">
-    <h6 class="panel-title">{{ 'coaster_ranking.info.title'|trans({'%rankingMonth%': ranking.computedAt|localizeddate('long', 'none')}) }}</h6>
+    <h6 class="panel-title">{{ 'coaster_ranking.info.title'|trans({'%rankingMonth%': ranking.computedAt|format_datetime('long', 'none')}) }}</h6>
     <div class="heading-elements visible-elements">
       {% set nextRankingDate = 'now'|date_modify('first day of next month midnight 1 minute') %}
       {% if nextRankingDate|date('U') - 'now'|date('U') > 7200 %}
