--- a/templates/Ranking/info.html.twig
+++ b/templates/Ranking/info.html.twig
@@ -19,7 +19,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          <i class="icon-comments position-left text-slate"></i><br/>{{ ranking.rankedCoasterNumber }}&nbsp
+          <i class="icon-comments position-left text-slate"></i><br/>{{ ranking.rankedCoasterNumber }}&nbsp;
           {% if ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber > 0 %}
             <span class="badge bg-blue-400">+{{ ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber }}</span>
           {% endif %}
@@ -31,7 +31,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          <i class="icon-stars position-left text-slate"></i><br/>{{ ranking.ratingNumber|shortNum }}
+          <i class="icon-stars position-left text-slate"></i><br/>{{ ranking.ratingNumber|shortNum }}&nbsp;
           {% if ranking.ratingNumber - previousRanking.ratingNumber > 1000 %}
             <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
           {% endif %}
@@ -54,8 +54,8 @@
       <div class="content-group">
         <h6 class="text-semibold no-margin">
           <i class="icon-git-compare position-left text-slate"></i><br/>{{ ranking.comparisonNumber|shortNum }}&nbsp;
-          {% if ranking.ratingNumber - previousRanking.ratingNumber > 1000 %}
-            <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
+          {% if ranking.comparisonNumber - previousRanking.comparisonNumber > 1000 %}
+            <span class="badge bg-blue-400">+{{ (ranking.comparisonNumber - previousRanking.comparisonNumber)|shortNum }}</span>
           {% endif %}
         </h6>
         <span class="visible-xs text-muted text-size-small">{{ 'coaster_ranking.info.comparisons.short'|trans }}</span>
