--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,12 +73,42 @@
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 <script type="text/javascript">
-  locale = '{{ app.request.locale }}';
-  var url = Routing.generate('ajax_main_search', {'_locale': '{{ app.request.locale }}'});
+  var charMap = {
+    'a': /[àáâãå]/gi,
+    'c': /[ç]/gi,
+    'e': /[èéêë]/gi,
+    'i': /[ïí]/gi,
+    'o': /[ôóøö]/gi,
+    'oe': /[œ]/gi,
+    'u': /[üú]/gi,
+    'n': /[ñ]/gi,
+    'ss': /[ß]/gi
+  };
+  var normalize = function (str) {
+    $.each(charMap, function (normalized, regex) {
+      str = str.replace(regex, normalized);
+    });
+    return str;
+  };
+  var queryTokenizer = function (q) {
+    var normalized = normalize(q);
+    return Bloodhound.tokenizers.nonword(normalized);
+  };
   var dataSource = new Bloodhound({
-    datumTokenizer: Bloodhound.tokenizers.obj.nonword('n', 's'),
-    queryTokenizer: Bloodhound.tokenizers.whitespace,
-    prefetch: url,
+    datumTokenizer: Bloodhound.tokenizers.obj.nonword('no'),
+    queryTokenizer: queryTokenizer,
+    prefetch: {
+      url: Routing.generate('ajax_main_search', {'_locale': '{{ app.request.locale }}'}),
+      cache: true,
+      ttl: 600000,
+      transform: function (obj) {
+        return obj.map(
+          function (x) {
+            return {no: normalize(x.n), n: x.n, r: x.r, s: x.s}
+          }
+        )
+      }
+    }
   });
   $('#search-coaster').typeahead(
       {
