restore locale variable

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,6 +73,8 @@
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 <script type="text/javascript">
+  // used for rating
+  var locale = '{{ app.request.locale }}';
   var charMap = {
     'a': /[àáâãå]/gi,
     'c': /[ç]/gi,
