--- a/templates/Maps/index.html.twig
+++ b/templates/Maps/index.html.twig
@@ -3,7 +3,9 @@
 {% block title %}{{ 'map_index.title'|trans }}{% endblock %}
 
 {% block header %}
-  <meta name="description" content="{{ 'map_index.description'|trans }}"/>
+  {% if meta_description is defined %}
+    <meta name="description" content="{{ meta_description|trans }}"/>
+  {% endif %}
 {% endblock %}
 
 {% set pageHasFilters = true %}
@@ -40,7 +42,7 @@
     var gmarkers = [];
 
     function initMap() {
-      map = L.map('map').setView([48.384098, 7.970846], 5);
+      map = L.map('map', {worldCopyJump: true}).setView([48.384098, 7.970846], 5);
       var gl = L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
         maxZoom: 15,
