[#79] - Add My photos & My reviews links to /me page

--- a/templates/Includes/list_reviews.html.twig
+++ b/templates/Includes/list_reviews.html.twig
@@ -53,7 +53,7 @@
           </div>
         </li>
       {% else %}
-        No review !
+          {{ 'review_list.no_review'|trans }}
       {% endfor %}
     </ul>
   </div>
