--- a/templates/Profile/me.html.twig
+++ b/templates/Profile/me.html.twig
@@ -63,10 +63,21 @@
               {{ 'me.menu.ratings'|trans }}
               <span class="badge bg-teal-400 pull-right">{{ user.ratings|length }}</span>
             </a>
+            <a href="{{ path('user_reviews', {'id': user.id}) }}" class="list-group-item">
+              <i class="icon-megaphone"></i>
+              {{ 'me.menu.reviews'|trans }}
+            </a>
             <a href="{{ path('user_tops', {'id': user.id}) }}" class="list-group-item">
               <i class="icon-clipboard3"></i>
               {{ 'me.menu.tops'|trans }}
             </a>
+            {% if user.images| length > 0 %}
+                <a href="{{ path('user_pictures', {'id': user.id}) }}" class="list-group-item">
+                  <i class="icon-camera"></i>
+                    {{ 'me.menu.photos'|trans }}
+                    <span class="badge bg-teal-400 pull-right">{{ user.images|length }}</span>
+                </a>
+            {% endif %}
             <a href="{{ path('map_user', {'id': user.id}) }}" class="list-group-item">
               <i class="icon-location3"></i>
               {{ 'me.menu.map'|trans }}
