--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -93,11 +93,10 @@
             <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
               <i class="icon-arrow-up8 text-warning-600"></i>
               {% if coaster.height is not empty %}
-                  {{ coaster.height }}
-                  {% if is_imperial %}
-                      ft
+                  {% if unities.isImperial(app.request.locale) %}
+                      {{ (coaster.height * 3.281)|round(0) }} ft
                   {% else %}
-                      m
+                      {{ coaster.height }} m
                   {% endif %}
               {% else %}
                 &nbsp;
@@ -106,12 +105,11 @@
             <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
               <i class="icon-rocket text-success-400"></i>
               {% if coaster.speed is not empty %}
-                {{ coaster.speed }}
-                {% if is_imperial %}
-                  mph
-                {% else %}
-                  km/h
-                {% endif %}
+                  {% if unities.isImperial(app.request.locale) %}
+                      {{ (coaster.speed / 1.609)|round(0) }} mph
+                  {% else %}
+                      {{ coaster.speed }} km/h
+                  {% endif %}
               {% else %}
                 &nbsp;
               {% endif %}
@@ -121,11 +119,10 @@
             <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
               <i class="icon-rulers text-blue"></i>
               {% if coaster.length is not empty %}
-                  {{ coaster.length }}
-                  {% if is_imperial %}
-                      ft
+                  {% if unities.isImperial(app.request.locale) %}
+                      {{ (coaster.length * 3.281)|round(0) }} ft
                   {% else %}
-                      m
+                      {{ coaster.length }} m
                   {% endif %}
               {% else %}
                 &nbsp;
