--- a/templates/ranking/info.html.twig
+++ b/templates/ranking/info.html.twig
@@ -11,7 +11,7 @@
       {% endif %}
       <span class="heading-text text-muted">
           <i class="icon-plus2 text-warning position-left"></i>
-          <a class="text-muted" href="{{ path('ranking_learn_more') }}">Learn more about the ranking</a>
+          <a class="text-muted" href="{{ path('ranking_learn_more') }}">{{ 'coaster_ranking.info.learn_more'|trans() }}</a>
         </span>
     </div>
   </div>
