Remove count & refactor javascript loadReviews

--- a/templates/Coaster/reviews-ajax.html.twig
+++ b/templates/Coaster/reviews-ajax.html.twig
@@ -6,7 +6,7 @@
         <div class="panel-heading">
             <h6 class="panel-title text-semiold">
                 {{ 'review.title'|trans }}
-                &nbsp;<span class="badge badge-primary">{{ count }}</span>
+                &nbsp;<span class="badge badge-primary">{{ reviews.getTotalItemCount() }}</span>
             </h6>
             {% if coaster.isRateable %}
                 <div class="pull-right">
