--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -41,7 +41,7 @@
 
                 </div>
             </div>
-            {% if park.latitude is not null and park.longitude is not null %}
+            {% if closestParks %}
                 <div class="panel panel-white">
                     <div class="panel-heading">
                         <h6>
