Fix bug on view if no reviews

--- a/templates/Coaster/reviews-ajax.html.twig
+++ b/templates/Coaster/reviews-ajax.html.twig
@@ -10,7 +10,7 @@
             </h6>
             {% if coaster.isRateable %}
                 <div class="pull-right">
-                    <a class="text-muted" href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
+                    <a class="text-muted" href="{{ path('review_form', {'id': coaster.id}) }}">
                         {{ 'review.send'|trans() }}
                     </a>
                 </div>
@@ -43,7 +43,7 @@
                       {% endif %}
                   </span>
                 </span>
-                                <span class="media-annotation dotted">
+                <span class="media-annotation dotted">
                   {{ review.updatedAt|ago }}
                 </span>
                             </div>
@@ -65,7 +65,7 @@
                             {% if is_granted('update', review) %}
                                 <ul class="list-inline list-inline-separate text-size-small">
                                     <li>
-                                        <a href="{{ path('review_form', {'id': review.coaster.id}) }}">{{ 'review.update'|trans }}</a>
+                                        <a href="{{ path('review_form', {'id': coaster.id}) }}">{{ 'review.update'|trans }}</a>
                                     </li>
                                     <li>
                                         <a onclick="deleteRating({{ review.id }})">{{ 'review.delete'|trans }}</a>
@@ -80,7 +80,7 @@
         </div>
         {% if coaster.isRateable %}
             <div class="panel-body">
-                <a href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
+                <a href="{{ path('review_form', {'id': coaster.id}) }}">
                     <button type="button" class="btn bg-blue">
                         <i class="icon-plus22"></i>
                         {{ 'review.send'| trans() }}
